--- a/style.css
+++ b/style.css
@@ -119,12 +119,9 @@ button.edit-btn {
     .container {
         width: 80%;
     }
-
-
-
 }
 
-@media (max-width: 425px) {
+@media (min-width: 320px) and (max-width: 425px) {
     .display input {
         font-size: 2.5em;
     }
@@ -136,5 +133,25 @@ button.edit-btn {
 
     button.edit-btn {
         font-size: 16px;
+    }
+}
+
+@media (max-width: 320px) {
+    .container {
+        width: 100%;
+        height: 80%;
+    }
+
+    .display input {
+        font-size: 2em;
+    }
+
+    .grid-container button {
+        font-size: 18px;
+        margin: 6px;
+    }
+
+    button.edit-btn {
+        font-size: 14px;
     }
 }
