--- a/style.css
+++ b/style.css
@@ -115,13 +115,18 @@ button.edit-btn {
     }
 }
 
-@media (max-width: 700px) {
+@media (min-width: 425px) and (max-width: 700px) {
     .container {
         width: 80%;
     }
 }
 
 @media (min-width: 320px) and (max-width: 425px) {
+
+    .container {
+        width: 95%;
+    }
+
     .display input {
         font-size: 2.5em;
     }
